--- a/packages/terre2/public/index.html
+++ b/packages/terre2/public/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="refresh" content="0;url=http://localhost">
 </head>
 <body>
-<h1>Going to WebGAL Terre......</h1>
+<h1>Going to idoltime......</h1>
 <h2>Here are some tests to test the state of the API.</h2>
-<h3>Test WebGAL Terre Service</h3>
-<a href="api/test">Test WebGAL Terre Api</a>
-<h3>Go to WebGAL Terre dev page</h3>
-<a href="http://localhost">WebGAL Terre</a>
+<h3>Test idoltime Service</h3>
+<a href="api/test">Test idoltime Api</a>
+<h3>Go to idoltime dev page</h3>
+<a href="http://localhost">idoltime</a>
 </body>
 </html>
